# CrypTorch

./: .gitignore  LICENSE  README.md  config.yml  mnist-example.py  model-190.pth  pyproject.toml
.devcontainer/: devcontainer.json
CrypTen/: .gitignore  LICENSE  setup.py
CrypTen/crypten/: __init__.py  cryptensor.py  default.yaml  encoder.py  gradients.py
CrypTen/crypten/common/: rng.py  tensor_types.py  util.py
CrypTen/crypten/common/functions/: approximations.py  maximum.py  pooling.py  regular.py
CrypTen/crypten/communicator/: communicator.py  distributed_communicator.py
CrypTen/crypten/config/: config.py
CrypTen/crypten/mpc/: bit_packing.py  hummingbird.py  mpc.py  packed_compare.py  padding.py
CrypTen/crypten/mpc/primitives/: arithmetic.py  beaver.py  binary.py  circuit.py  converters.py
CrypTen/crypten/mpc/provider/: provider.py  tfp_provider.py
CrypTen/crypten/nn/: module.py
CrypTen/crypten/ring_size/: __init__.py
cryptorch/: custom_int_kernels.py  custom_int_kernels_dispatcher.py  helpers.py  hummingbird_tuning.py  interpreter_debug.py  knob_tuner.py  lowering.py  pass_manager.py  passes.py  serialization.py  system_params.py  train_helpers.py  utils.py
cryptorch/mpc_runtime/: base_runtime.py  cryptenpp_runtime.py  runtime.py
cutlass/: .gitignore  LICENSE  README.md  conv2d_int.cu  conv2d_int.h  conv2d_int_wrapper.cpp  gemm_int.cu  gemm_int.h  gemm_int_wrapper.cpp  setup.py  test_gemm64.py
