[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cryptorch"
version = "0.0.1"
authors = [
  { name="Jinyu Liu", email="liu.jinyu@psu.edu" },
  { name="Kiwan Maeng", email="kvm6242@psu.edu" },
]
description = "CrypTroch"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "torch==2.8.0",
    "crypten-plus-plus>=0.4.0",
    "pyyaml>=5.3.1",
    "tqdm>=4.67.1",
    "executorch>=0.7.0",
]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"